// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BookCard > renders parent variant with multiple readers 1`] = `
<div
  class="flex rounded-xl border border-border bg-card overflow-hidden hover:border-primary transition-colors"
>
  <div
    class="w-16 h-24 flex items-center justify-center shrink-0"
    style="background-color: var(--cover-1);"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open w-8 h-8 text-white/80"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="flex-1 p-4 flex flex-col justify-between min-w-0"
  >
    <div>
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="min-w-0 flex-1"
        >
          <h3
            class="font-[family-name:var(--font-marcellus)] font-semibold text-foreground truncate"
          >
            Where the Wild Things Are
          </h3>
          <p
            class="text-sm text-muted-foreground truncate"
          >
            Maurice Sendak
          </p>
        </div>
        <div
          class="relative shrink-0"
        >
          <button
            class="h-8 w-8 rounded-lg bg-secondary flex items-center justify-center text-muted-foreground hover:text-foreground transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="text-xs text-muted-foreground capitalize mt-1"
      >
        ready
      </span>
    </div>
    <div
      class="mt-3 space-y-1.5"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="h-2.5 w-2.5 rounded-full shrink-0"
          style="background-color: rgb(92, 184, 122);"
        />
        <span
          class="text-xs text-muted-foreground w-12 truncate shrink-0"
        >
          Fynn
        </span>
        <div
          class="flex-1 h-1.5 rounded-full bg-muted overflow-hidden"
        >
          <div
            class="h-full rounded-full"
            style="width: 80%; background-color: rgb(92, 184, 122);"
          />
        </div>
        <span
          class="text-xs text-muted-foreground w-8 text-right shrink-0"
        >
          80
          %
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="h-2.5 w-2.5 rounded-full shrink-0"
          style="background-color: rgb(167, 139, 218);"
        />
        <span
          class="text-xs text-muted-foreground w-12 truncate shrink-0"
        >
          Luca
        </span>
        <div
          class="flex-1 h-1.5 rounded-full bg-muted overflow-hidden"
        >
          <div
            class="h-full rounded-full"
            style="width: 25%; background-color: rgb(167, 139, 218);"
          />
        </div>
        <span
          class="text-xs text-muted-foreground w-8 text-right shrink-0"
        >
          25
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BookCard > renders parent variant with no readers 1`] = `
<div
  class="flex rounded-xl border border-border bg-card overflow-hidden hover:border-primary transition-colors"
>
  <div
    class="w-16 h-24 flex items-center justify-center shrink-0"
    style="background-color: var(--cover-1);"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open w-8 h-8 text-white/80"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
  </div>
  <div
    class="flex-1 p-4 flex flex-col justify-between min-w-0"
  >
    <div>
      <div
        class="flex items-start justify-between gap-2"
      >
        <div
          class="min-w-0 flex-1"
        >
          <h3
            class="font-[family-name:var(--font-marcellus)] font-semibold text-foreground truncate"
          >
            Where the Wild Things Are
          </h3>
          <p
            class="text-sm text-muted-foreground truncate"
          >
            Maurice Sendak
          </p>
        </div>
        <div
          class="relative shrink-0"
        >
          <button
            class="h-8 w-8 rounded-lg bg-secondary flex items-center justify-center text-muted-foreground hover:text-foreground transition-colors"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis-vertical w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="12"
                cy="5"
                r="1"
              />
              <circle
                cx="12"
                cy="19"
                r="1"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="text-xs text-muted-foreground capitalize mt-1"
      >
        ready
      </span>
    </div>
  </div>
</div>
`;

exports[`BookCard > renders reader variant at 0% progress 1`] = `
<div
  class="flex flex-col rounded-2xl border border-border bg-card overflow-hidden cursor-pointer touch-manipulation transition-all hover:border-primary"
  whilehover="[object Object]"
  whiletap="[object Object]"
>
  <div
    class="relative h-44 overflow-hidden flex items-center justify-center"
    style="background-color: var(--cover-1);"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open w-16 h-16 text-white/80"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/10 to-transparent"
    />
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <h3
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white drop-shadow line-clamp-2"
      >
        Where the Wild Things Are
      </h3>
      <p
        class="text-xs text-white/80 truncate"
      >
        Maurice Sendak
      </p>
    </div>
  </div>
  <div
    class="p-5"
  >
    <button
      class="mt-4 w-full h-14 rounded-2xl bg-accent text-accent-foreground font-[family-name:var(--font-marcellus)] font-bold text-lg flex items-center justify-center gap-2 hover:bg-accent/90 shadow-[0_4px_14px] shadow-accent/30 hover:shadow-accent/50 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mic w-6 h-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19v3"
        />
        <path
          d="M19 10v2a7 7 0 0 1-14 0v-2"
        />
        <rect
          height="13"
          rx="3"
          width="6"
          x="9"
          y="2"
        />
      </svg>
      Start Reading
    </button>
  </div>
</div>
`;

exports[`BookCard > renders reader variant complete 1`] = `
<div
  class="flex flex-col rounded-2xl border border-border bg-card overflow-hidden cursor-pointer touch-manipulation transition-all hover:border-primary"
  whilehover="[object Object]"
  whiletap="[object Object]"
>
  <div
    class="relative h-44 overflow-hidden flex items-center justify-center"
    style="background-color: var(--cover-1);"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open w-16 h-16 text-white/80"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/10 to-transparent"
    />
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <h3
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white drop-shadow line-clamp-2"
      >
        Where the Wild Things Are
      </h3>
      <p
        class="text-xs text-white/80 truncate"
      >
        Maurice Sendak
      </p>
    </div>
  </div>
  <div
    class="p-5"
  >
    <div
      class="inline-block bg-magic/10 text-magic px-3 py-1 rounded-full text-sm font-bold"
    >
      Complete!
    </div>
    <button
      class="mt-4 w-full h-14 rounded-2xl bg-accent text-accent-foreground font-[family-name:var(--font-marcellus)] font-bold text-lg flex items-center justify-center gap-2 hover:bg-accent/90 shadow-[0_4px_14px] shadow-accent/30 hover:shadow-accent/50 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mic w-6 h-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19v3"
        />
        <path
          d="M19 10v2a7 7 0 0 1-14 0v-2"
        />
        <rect
          height="13"
          rx="3"
          width="6"
          x="9"
          y="2"
        />
      </svg>
      Read Again
    </button>
  </div>
</div>
`;

exports[`BookCard > renders reader variant mid-read 1`] = `
<div
  class="flex flex-col rounded-2xl border border-border bg-card overflow-hidden cursor-pointer touch-manipulation transition-all hover:border-primary"
  whilehover="[object Object]"
  whiletap="[object Object]"
>
  <div
    class="relative h-44 overflow-hidden flex items-center justify-center"
    style="background-color: var(--cover-1);"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-book-open w-16 h-16 text-white/80"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v14"
      />
      <path
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
      />
    </svg>
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/10 to-transparent"
    />
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <h3
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white drop-shadow line-clamp-2"
      >
        Where the Wild Things Are
      </h3>
      <p
        class="text-xs text-white/80 truncate"
      >
        Maurice Sendak
      </p>
    </div>
  </div>
  <div
    class="p-5"
  >
    <div>
      <div
        class="flex items-center justify-between text-sm mb-1"
      >
        <span
          class="text-muted-foreground"
        >
          Progress
        </span>
        <span
          class="font-semibold text-foreground"
        >
          45
          %
        </span>
      </div>
      <div
        class="h-1.5 rounded-full bg-muted overflow-hidden"
      >
        <div
          class="h-full bg-primary rounded-full"
          style="width: 45%;"
        />
      </div>
    </div>
    <button
      class="mt-4 w-full h-14 rounded-2xl bg-accent text-accent-foreground font-[family-name:var(--font-marcellus)] font-bold text-lg flex items-center justify-center gap-2 hover:bg-accent/90 shadow-[0_4px_14px] shadow-accent/30 hover:shadow-accent/50 transition-all"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-mic w-6 h-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 19v3"
        />
        <path
          d="M19 10v2a7 7 0 0 1-14 0v-2"
        />
        <rect
          height="13"
          rx="3"
          width="6"
          x="9"
          y="2"
        />
      </svg>
      Continue
    </button>
  </div>
</div>
`;
